[project]
name = "poc-apscheduler"
version = "0.1.0"
description = "POC de agendador de tarefas com APScheduler — exemplos práticos de casos de uso"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.10,<4.0",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]
